feature: gather all service based urls
OCD-4175